[package]
name = "os_clock"
version = "0.2.0"
authors = ["Ben Aubin <ben@benaubin.com>"]
edition = "2018"
license = "MIT"
description = "Operating system clocks, for measuring with cpu time"
homepage = "https://github.com/benaubin/os_clocks"
repository = "https://github.com/benaubin/os_clocks"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.76"

[build-dependencies]
bindgen = "0.55.1"

[dev-dependencies]
